--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>{{title}}</title>
-      <meta charset="utf-8" />
-
+    <meta charset="utf-8" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, shrink-to-
+    fit=no">
     <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
+</head>
   <body>
       {{> header}}
     {{{body}}}
