--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,14 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-
     fit=no">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+
+
+    <link rel="stylesheet"
+          href="/assets/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel='stylesheet' href='/assets/stylesheets/style.css' />
+
+
+    <!--<link rel='stylesheet' href='/stylesheets/style.css' />-->
 </head>
   <body>
       {{> header}}
