--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,18 +5,24 @@
 
 
 
+<div class="container-fluid">
 
 
+    <div class="row">
+        <div class="col-12 btn-group-vertical" role="group">
+            {{#each notelist}}
+            
+                
+                <a class="btn btn-lg btn-block btn-outline-dark" href="/notes/view?key={{ key }}">{{ title }}</a>
+            
+            {{/each}}
+        </div>
+
+    </div>
 
 
-<ul>
-    {{#each notelist}}
-    <li>
-        {{ key }}:
-        <a href="/notes/view?key={{ key }}">{{ title }}</a>
-    </li>
-    {{/each}}
-</ul>
+</div>
+
 
 
 
