--- a/views/notedestroy.hbs
+++ b/views/notedestroy.hbs
@@ -1,17 +1,41 @@
+<!--<form method='POST' action='/notes/destroy/confirm'>
+
+    <div class="container-fluid">
 
 
+        <input type='hidden' name='notekey' value='{{#if note}}{{notekey}}{{/if}}'>
+        <p class="form-text">Delete {{note.title}}?</p>
+        <br />
+        <div class="btn-group">
+            <input type='submit' value='DELETE' class="btn-group btn-outline-dark" />
+            <a  class="btn-group btn-outline-dark" href="/notes/view?key={{#if note}}{{notekey}}{{/if}}">Cancel</a>
 
+        </div>
 
+    </div>
+
+</form>-->
 
 
 
 
 
 <form method='POST' action='/notes/destroy/confirm'>
-    <input type='hidden' name='notekey' value='{{#if note}}{{notekey}}{{/if}}'>
-    <p>Delete {{note.title}}?</p>
-    <br /><input type='submit' value='DELETE' />
-    <a href="/notes/view?key={{#if note}}{{notekey}}{{/if}}">Cancel</a>
+    <div class="container-fluid">
+        <input type='hidden' name='notekey' value='{{#if note}}{{notekey}}{{/if}}'>
+        <p class="form-text">Delete {{note.title}}?</p>
+        <div class="btn-group">
+            <button type="submit" value='DELETE'
+                    class="btn btn-outline-dark">
+                DELETE
+            </button>
+            <a class="btn btn-outline-dark"
+               href="/notes/view?key={{#if note}}{{notekey}}{{/if}}"
+               role="button">
+                Cancel
+            </a>
+        </div>
+    </div>
 </form>
 
 
