--- a/views/notedestroy.hbs
+++ b/views/notedestroy.hbs
@@ -22,6 +22,7 @@
 
 <form method='POST' action='/notes/destroy/confirm'>
     <div class="container-fluid">
+        {{#if user}}
         <input type='hidden' name='notekey' value='{{#if note}}{{notekey}}{{/if}}'>
         <p class="form-text">Delete {{note.title}}?</p>
         <div class="btn-group">
@@ -35,6 +36,9 @@
                 Cancel
             </a>
         </div>
+        {{else}}
+        {{> not-logged-in }}
+        {{/if}}
     </div>
 </form>
 
