--- a/views/noteedit.hbs
+++ b/views/noteedit.hbs
@@ -25,6 +25,8 @@
 
 <form method='POST' action='/notes/save'>
     <div class="container-fluid">
+       {{#if user}}
+        <div>
         {{#if docreate}}
         <input type='hidden' name='docreate' value="create">
         {{else}}
@@ -60,6 +62,10 @@
                       rows="5">{{#if note }}{{note.body}}{{/if}}</textarea>
         </div>
         <button type="submit" class="btn btn-outline-dark">Submit</button>
+    </div>
+        {{else}}
+        {{> not-logged-in }}
+        {{/if}}
     </div>
 </form>
 
