--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -18,7 +18,7 @@
     <nav class="navbar" navbar-expand-md navbar-dark bg-dark>
         <a class="navbar-brand" href="/"><i data-feather="home"></i></a> 
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarLogIn" aria-controls="navbarLogIn" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -43,16 +43,31 @@
         <a class="navbar-brand" href='/'><i data-feather="home"></i></a>
         
         <button class="navbar-toggler" type="button"
-                data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
+                data-toggle="collapse" data-target="#navbarLogIn"
+                aria-controls="navbarLogIn"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <span class="navbar-text col">{{title}}</span>
 
-            <a class="nav-item nav-link btn btn-light col-auto"
-               href='/notes/add'>ADD Note</a>
+        {{#if user}}
+          <div class="collapse navbar-collapse" id="navbarLogIn">
+              <span class="navbar-text text-dark col">{{ title }}</span>
+              <a class="btn btn-dark col-auto" href="/users/logout">
+                  Log Out <span class="badge badge-light">{{  user.username }}</span>
+              </a>
+              <a class="nav-item nav-link btn btn-dark col-auto" href="/notes/add">ADD Note</a>
+          </div>
+        {{else}}
+            <div class="collapse navbar-collapse" id="navbarLogIn">
+                <a class="btn btn-primary" href="/users/login">Log in</a>
+            </div>
+        {{/if}}
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <span class="navbar-text col">{{title}} App</span>
+
+            <!--<a class="nav-item nav-link btn btn-light col-auto"
+               href='/notes/add'>ADD Note</a>-->
 
         </div>
     </nav>
