--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -13,30 +13,6 @@
 
 
 
-<!--<header class="page-header">
-    <h1>{{ title }}</h1>
-    <nav class="navbar" navbar-expand-md navbar-dark bg-dark>
-        <a class="navbar-brand" href="/"><i data-feather="home"></i></a> 
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarLogIn" aria-controls="navbarLogIn" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="navbar-nav col">
-                {{#if breadcrumb}}
-                <a class="nav-item nav-link" href="{{breadcrumb.url}}">{{breadcrumb.title}}</a>
-                {{/if}}
-            </div>
-            <a class="nav-item nav-link btn btn-light col-auto" href="/notes/add">ADD Note</a>
-        </div>
-
-        
-    </nav>
-</header>-->
-
-
-
 <header class="page-header">
     
     <nav class="navbar navbar-expand-md navbar-dark bg-dark margin003">
@@ -59,7 +35,11 @@
           </div>
         {{else}}
             <div class="collapse navbar-collapse" id="navbarLogIn">
+                <span class="navbar-text text-dark col"></span>
                 <a class="btn btn-primary" href="/users/login">Log in</a>
+                {{#if facebookLogin}}
+                <a class="nav-item nav-link btn btn-dark col-auto" href="users/auth/facebook"><img width="25" class="picture001" alt="hello world" src="/assets/images/facebookicon.png"/>Log in with Facebook</a>
+                {{/if}}
             </div>
         {{/if}}
 
